fix form spacing

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -8572,7 +8572,7 @@ header:before {
 
 @media (min-width: 480px) {
   header:before {
-    height: 110px;
+    height: 90px;
   }
 }
 
@@ -8584,7 +8584,7 @@ header:before {
 
 @media (min-width: 768px) {
   header:before {
-    height: 200px;
+    height: 110px;
   }
 }
 
